# app/Models/Uzytkownik.php
@@ -69,6 +69,10 @@ class Uzytkownik extends Authenticatable
     {
         return $this->hasMany(Konto::class, 'id_uzytkownika'); // 'id_uzytkownika' to klucz obcy w tabeli 'konta'
     }
+    public function portfel()
+    {
+        return $this->hasMany(Portfel::class, 'id_uzytkownika'); // 'id_uzytkownika' to klucz obcy w tabeli 'konta'
+    }
     public function zleceniaStale()
     {
         return $this->hasMany(ZlecenieStale::class, 'id_uzytkownika');
